extends Control
#--------------------------------------------------------------------------------------------------------------#

#--------------------------------------------------------------------------------------------------------------#
func _on_Start_released():
	get_tree().change_scene("res://Scene/World Scene/Test-World.tscn")
#--------------------------------------------------------------------------------------------------------------#
func _on_Settings_released():
	pass # Replace with function body.
#--------------------------------------------------------------------------------------------------------------#
func _on_Exit_released():
	get_tree().quit()
#--------------------------------------------------------------------------------------------------------------#
